--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.111.0",
     "@react-three/fiber": "^8.17.5",
+    "@react-three/p2": "^0.0.6",
+    "@types/three": "^0.167.1",
+    "lerp": "^1.0.3",
+    "lodash-es": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.167.1"
+    "react-gamepads": "^1.0.0",
+    "three": "^0.167.1",
+    "three-stdlib": "^2.32.2",
+    "valtio": "^1.13.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@react-three/eslint-plugin": "^0.1.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "customize-cra": "^1.0.0",
+    "customize-cra-react-refresh": "^1.1.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
