--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://your-username.github.io/r3f-scene/",
+  "homepage": "https://junmaxwell.github.io/r3f-scene/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
