fix: Fix page url

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -24,6 +24,8 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    env:
+      PUBLIC_URL: /r3f-scene/  # Set the base URL for your assets
     steps:
       - name: Checkout
         uses: actions/checkout@v2
